[package]
name = "runner"
version = "0.0.1"
edition = "2021"
authors = ["Jia Jia <angersax@sina.com>"]
include = [
    "src/**/*",
    "Cargo.toml",
    "README.md"
]
description = "build runner"
repository = "https://github.com/distbuild/runner"
documentation = "https://github.com/distbuild/runner"
homepage = "https://github.com/distbuild/runner"
keywords = ["build", "runner"]
categories = ["build"]
license = "Apache-2.0"
readme = "README.md"

[[bin]]
name = "runner"
path = "src/main.rs"

[dependencies]
clap = "3.0"
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.8"

[badges]
maintenance = { status = "actively-developed" }
